fix: tablets overflow

--- a/src/app/projetos/SubComponentes/CardProjeto/cardProjeto.css
+++ b/src/app/projetos/SubComponentes/CardProjeto/cardProjeto.css
@@ -172,7 +172,7 @@
     right: 10%;
     z-index: 2;
     width: auto;
-    height: 90vh;
+    height: 40vh;
     padding: 20px;
     padding-top: 40px;
     position: fixed;
